# src/Balsam/api/openapi.yaml
@@ -1,34 +1,33 @@
 openapi: 3.0.2
 info:
-  description: This a service contract for the OicdProvider in Balsam.
-  title: S3Provider
+  description: This a service contract for the OidcProvider in Balsam.
+  title: OidcProvider
   version: "2.0"
 servers:
-- url: http://s3-provider.balsam-system.svc.cluster.local/api/v1
+- url: http://oidc-provider.balsam-system.svc.cluster.local/api/v1
 tags:
-- description: Buckets methods
-  name: Bucket
+- description: Group methods
+  name: Group
 paths:
-  /buckets:
+  /groups:
     post:
-      description: Creates a new Bucket
-      operationId: CreateBucket
+      description: Creates a new group
+      operationId: CreateGroup
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CreateBucketRequest'
-        description: Definition of a new role
+              $ref: '#/components/schemas/CreateGroupRequest'
+        description: Definition of a new group
       responses:
         "200":
           content:
             application/json:
               example:
-                preferedName: Demo repot
-                name: demo-repot
-                path: https://mygit.local/demo-repot.git
+                name: demo_users
+                id: 12
               schema:
-                $ref: '#/components/schemas/BucketCreatedResponse'
+                $ref: '#/components/schemas/GroupCreatedResponse'
           description: Success
         "400":
           content:
@@ -41,16 +40,16 @@ paths:
                 $ref: '#/components/schemas/Problem'
           description: Error respsone for 400
       tags:
-      - Bucket
-  /buckets/{bucketId}/folder:
+      - Group
+  /groups/{groupId}/users:
     post:
-      description: Creates a new virtual folder in the bucket.
-      operationId: CreateFolder
+      description: Adds a user to the group
+      operationId: AddUserToGroup
       parameters:
-      - description: the name of the bucket
+      - description: The id for the group
         explode: false
         in: path
-        name: bucketId
+        name: groupId
         required: true
         schema:
           type: string
@@ -59,14 +58,10 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CreateFolderRequest'
-        description: Definition of a new role
+              $ref: '#/components/schemas/AddUserToGroupRequest'
+        description: Definition of the user to add to the group
       responses:
         "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/FolderCreatedResponse'
           description: Success
         "400":
           content:
@@ -79,51 +74,9 @@ paths:
                 $ref: '#/components/schemas/Problem'
           description: Error respsone for 400
       tags:
-      - Bucket
-  /buckets/{bucketId}/acceskey:
-    post:
-      description: Creates a new acces key for the bucket.
-      operationId: CreateAccessKey
-      parameters:
-      - description: the name of the bucket
-        explode: false
-        in: path
-        name: bucketId
-        required: true
-        schema:
-          type: string
-        style: simple
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AccessKeyCreatedResponse'
-          description: Success
-        "400":
-          content:
-            application/problem+json:
-              example:
-                title: Bad Request
-                status: 400
-                detail: Generic error
-              schema:
-                $ref: '#/components/schemas/Problem'
-          description: Error respsone for 400
-      tags:
-      - Bucket
+      - Group
 components:
   responses:
-    ErrorResponse400NoRepo:
-      content:
-        application/problem+json:
-          example:
-            title: Bad Request
-            status: 400
-            detail: No such repository
-          schema:
-            $ref: '#/components/schemas/Problem'
-      description: Error respsone for 400
     ErrorResponse400:
       content:
         application/problem+json:
@@ -135,102 +88,42 @@ components:
             $ref: '#/components/schemas/Problem'
       description: Error respsone for 400
   schemas:
-    CreateBucketRequest:
-      description: Bucket name
+    CreateGroupRequest:
+      description: Group name
       example:
-        defaultBranchName: defaultBranchName
-        name: name
-        description: description
-      properties:
-        name:
-          description: The name of the bucket
-          type: string
-        description:
-          description: The description of the branch
-          type: string
-        defaultBranchName:
-          description: The branch from which this branch will be created. The default
-            branch for the project will be used if not specified.
-          type: string
-      required:
-      - defaultBranchName
-      - name
-      type: object
-    CreateFolderRequest:
-      description: Folder name
-      example:
-        fromBranch: fromBranch
         name: name
       properties:
         name:
-          description: The name of the folder
-          type: string
-        fromBranch:
-          description: The branch from which this branch will be created. The default
-            branch for the project will be used if not specified.
+          description: The name of the group
           type: string
       required:
-      - fromBranch
       - name
       type: object
-    BucketCreatedResponse:
-      description: Bucket description
+    AddUserToGroupRequest:
+      description: Group name
       example:
-        requestedName: requestedName
-        name: name
-        id: id
-        preferredName: preferredName
+        userName: userName
       properties:
-        requestedName:
-          description: The requested name of the bucket
-          type: string
-        preferredName:
-          description: The preferred name for the repository
-          type: string
-        name:
-          description: The name of the bucket
-          type: string
-        path:
-          description: The path to the repository that can be used for clone it.
+        userName:
+          description: The name of the user
           type: string
       required:
-      - id
-      - name
-      - requestedName
+      - userName
       type: object
-    FolderCreatedResponse:
-      description: Folder created description
+    GroupCreatedResponse:
+      description: Group created response
       example:
-        requestedName: requestedName
         name: name
         id: id
       properties:
-        requestedName:
-          description: The requested name of the virtual folder
-          type: string
         name:
-          description: The name of the virtual folder
+          description: The name of the group
+          type: string
+        id:
+          description: The id to the group that can be used for accessing it.
           type: string
       required:
-      - id
       - name
-      - requestedName
-      type: object
-    AccessKeyCreatedResponse:
-      description: Access key created description
-      example:
-        secretKey: secretKey
-        accessKey: accessKey
-      properties:
-        accessKey:
-          description: The access key
-          type: string
-        secretKey:
-          description: The secret key
-          type: string
-      required:
-      - accessKey
-      - secretKey
       type: object
     Problem:
       properties:
