# src/Balsam/src/Balsam.Api/Controllers/ProjectController.cs
@@ -17,12 +17,13 @@ namespace Balsam.Api.Controllers
         private readonly CapabilityOptions _git;
         private readonly CapabilityOptions _authentication;
         private readonly HubClient _hubClient;
+        private readonly ILogger<ProjectController> _logger;
 
 
-        public ProjectController(IOptionsSnapshot<CapabilityOptions> capabilityOptions, HubClient hubClient)
+        public ProjectController(IOptionsSnapshot<CapabilityOptions> capabilityOptions, Logger<ProjectController> logger,HubClient hubClient)
         {
             _hubClient = hubClient;
-
+            _logger = logger;
             _git = capabilityOptions.Get(Capabilities.Git);
             _authentication = capabilityOptions.Get(Capabilities.Authentication);
         }
@@ -39,19 +40,30 @@ namespace Balsam.Api.Controllers
             {
                 return BadRequest(new Problem() { Title = "Parameters missing", Status = 400, Type = "Missing parameters" });
             }
+            var username = this.User.Claims.FirstOrDefault(c => c.Type == "preferred_username")?.Value;
 
-            BalsamProject? project = await _hubClient.CreateProject(createProjectRequest.Name, createProjectRequest.Description, createProjectRequest.BranchName);
-
-            if (project == null)
+            try
             {
-                return BadRequest(new Problem() { Title = "Project with that name already exists", Status = 400, Type = "Project duplication" });
+
+                BalsamProject? project = await _hubClient.CreateProject(createProjectRequest.Name, createProjectRequest.Description, createProjectRequest.BranchName, username);
+
+                if (project == null)
+                {
+                    return BadRequest(new Problem() { Title = "Project with that name already exists", Status = 400, Type = "Project duplication" });
+                }
+
+                var evt = new ProjectCreatedResponse();
+                evt.Id = project.Id;
+                evt.Name = project.Name;
+
+                return Ok(evt);
+
             }
-
-            var evt = new ProjectCreatedResponse();
-            evt.Id = project.Id;
-            evt.Name = project.Name;
-
-            return Ok(evt);
+            catch (Exception ex)
+            {
+                _logger.LogError("Could not create project", ex);
+                return BadRequest(new Problem() { Title = "Internal error", Status = 400, Type = "Internal error" });
+            }
         }
 
         public override Task<IActionResult> GetFiles([FromRoute(Name = "projectId"), Required] string projectId, [FromRoute(Name = "branchId"), Required] string branchId)
